--- a/src/app/components/ArticleCard/articleCard.module.css
+++ b/src/app/components/ArticleCard/articleCard.module.css
@@ -1,13 +1,7 @@
-.pageTitle {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 40px;
-    color: rgb(77, 31, 0);
-}
 .articleCard {
     border: 2px solid rgb(77, 31, 0);
     border-radius: 10px;
     padding: 0% 1%;
-    max-width: 85%;
     display: flex;
     flex-direction: row;
     margin: 2%;
@@ -34,18 +28,18 @@
 }
 
 .articleTitle {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;;
     font-size: 25px;
 }
 
 .articleDate {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;;
     font-size: 12px;
     font-weight: lighter;
 }
 
 .articleDes {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;;
     font-size: 14px;
 }
 
