--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,15 +1,7 @@
 .page {
-  max-width: 1200px;
-  padding: 25px;
-  margin: 0px auto;
-  align-content: center;
-}
-
-.introCont {
-  background-color: lightblue;
-  padding: 2% 5%;
-  margin-bottom: 50px;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: 0 80px;
+  background-color: #FFF8EE;
+  min-height: 100vh;
 }
 
 .articleDate {
@@ -23,4 +15,19 @@
 .articleTxt {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
+}
+
+.articleWrapper {
+  padding: 2% 5%;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0 auto;
+  max-width: 640px
+  
+}
+
+.articleHeader {
+  background-color: lightblue;
+  padding: 40 20 20 20;
+  background-size: cover;
+  background-blend-mode: lighten;
 }
